force-app/main/default/objects/Class__c/fields/Room_no__c.field-meta.xml
<CustomField>
    <fullName>Room_no__c</fullName>
    <label>Room no</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Floor__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
            </value>
            <value>
                <fullName>002</fullName>
            </value>
            <value>
                <fullName>003</fullName>
            </value>
            <value>
                <fullName>004</fullName>
            </value>
            <value>
                <fullName>101</fullName>
            </value>
            <value>
                <fullName>102</fullName>
            </value>
            <value>
                <fullName>103</fullName>
            </value>
            <value>
                <fullName>104</fullName>
            </value>
            <value>
                <fullName>201</fullName>
            </value>
            <value>
                <fullName>202</fullName>
            </value>
            <value>
                <fullName>203</fullName>
            </value>
            <value>
                <fullName>204</fullName>
            </value>
            <value>
                <fullName>301</fullName>
            </value>
            <value>
                <fullName>302</fullName>
            </value>
            <value>
                <fullName>303</fullName>
            </value>
            <value>
                <fullName>304</fullName>
            </value>
            <value>
                <fullName>401</fullName>
            </value>
            <value>
                <fullName>402</fullName>
            </value>
            <value>
                <fullName>403</fullName>
            </value>
            <value>
                <fullName>404</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>